Sat Sep 17 02:26:58 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* cp-valprint.c (static_field_print):  New variable, controls
	printing of static members.
	(_initialize_cp_valprint):  New print set subcommand
	"static-members". Turn on printing of static members by default.
	(cp_print_value_fields):  Print static members if necessary.

	* solib.c:  Remove inclusion of libelf.h and elf/mips.h.
	(elf_locate_base):  Use only standard BFD functions to collect
	information about the .dynamic section. Check for DT_MIPS_RLD_MAP
	tag only if it got defined via the inclusion of <link.h>.

	* f-exp.y:  Write block for OP_VAR_VALUE.
	* f-valprint.c (info_common_command):  Handle `info common'
	without an argument correctly.

	* c-typeprint.c (c_type_print_base):  Handle template constructors.
	* symtab.c (gdb_mangle_name):  Handle template method mangling,
	get rid of GCC_MANGLE_BUG code, which only applied to gcc-2.2.2.

Fri Sep 16 16:06:08 1994  Per Bothner  (bothner@kalessin.cygnus.com)

	* gdbtypes.h (TYPE_INDEX_TYPE):  New macro.
	* ch-typeprint.c, ch-valprint.c:  Use TYPE_INDEX_TYPE.
	* ch-valprint.c (chill_val_print):  Pass index type directly
	(instead of its TYPE_TARGET_TYPE) to print_type_scalar.
	* stabsread.c (read_type):  Don't set TYPE_FLAG_TARGET_STUB
	if the index type is a stub.

Fri Sep 16 17:18:44 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* config/i386/{i386aix.mh, i386bsd.mh, i386lynx.mh, i386sco.mh,
	i386sco4.mh, i386sol2.mh, i386v.mh, i386v32.mh, i386v4.mh,
	ncr3000.mh, ptx.mh, ptx4.mh}, config/m68k/{altos.mh, apollo68v.mh,
	delta68.mh, dpx2.mh, hp300bsd.mh, hp300hpux.mh, m68klynx.mh,
	m68kv4.mh}, config/m88k/{delta88.mh, delta88v4.mh},
	config/mips/riscos.mh, config/pa/hppahpux.mh,
	config/sparc/{sparclynx.mh, sun4sol2.mh}, config/tahoe/tahoe.mh,
	config/vax/{vaxbsd.mh, vaxult.mh, vaxult2.mh} (REGEX, REGEX1,
	SYSV_DEFINE): No longer define.
	* config/i386/i386sco4.mh (MUNCH_DEFINE): No longer define.
